# ClientSeverSearchAlgos

./: Astar.h  BDFS.h  BestFirstSearch.cpp  BestFirstSearch.h  CMakeLists.txt  CachManager.h  CacheManager.h  ClientHandle.cpp  ClientHandle.h  ClientHandler.h  ContainerQueue.h  ContainerStack.h  DataStructure.h  FileCachManager.cpp  FileCachManager.h  HashFuncs.h  MatrixSearchable.cpp  MatrixSearchable.h  MyMatrixClientHandler.cpp  MyMatrixClientHandler.h  MyParallServer.cpp  MyParallServer.h  MyParallelServer.cpp  MyParallelServer.h  MyPriorityQueue.h  MySerialServer.cpp  MySerialServer.h  Searchable.h  Searcher.h  SearcherAbstruct.h  Server.h  SolveSearch.cpp  SolveSearch.h  Solver.h  State.cpp  State.h  Step.h  To_String.h  container.h  main.cpp
